[gd_scene load_steps=9 format=3 uid="uid://c8xa1hurve827"]

[ext_resource type="Texture2D" uid="uid://kcj0o0fgykr5" path="res://assets/image/Almanac/Almanac_ZombieWindow.png" id="1_0hgaq"]
[ext_resource type="Script" uid="uid://cd7p8v1iqsry6" path="res://scripts/Almanac/almanac_zombie_card.gd" id="1_y3dyy"]
[ext_resource type="Texture2D" uid="uid://c3u2ptvhtmyd3" path="res://assets/image/Almanac/Almanac_ZombieWindow2.png" id="34_20rvx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t27vh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0jbj0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qvulr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v5cel"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q3iw5"]

[node name="AlmanacZombieCard" type="Control"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y3dyy")

[node name="AlmanacZombieCardBg" type="TextureRect" parent="."]
clip_children = 2
layout_mode = 0
offset_right = 76.0
offset_bottom = 76.0
texture = ExtResource("1_0hgaq")

[node name="AlmanacZombieCardFront" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("34_20rvx")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_t27vh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0jbj0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qvulr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v5cel")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q3iw5")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
